--- a/PAP/Base.lproj/Main.storyboard
+++ b/PAP/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="hkt-ql-OMX" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="QWx-T9-wyL"/>
+                                    <segue destination="hkt-ql-OMX" kind="modal" modalPresentationStyle="fullScreen" id="QWx-T9-wyL"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Lra-8T-i07">
@@ -178,6 +178,10 @@
                                     <constraint firstAttribute="width" constant="600" id="lvR-N8-l4u"/>
                                     <constraint firstAttribute="height" constant="44" id="q5K-6q-LQL"/>
                                 </constraints>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem title="Title" id="KEU-Ng-2i1"/>
                                 </items>
